Test fix for center and spacing issue.

--- a/_chess_styles.css
+++ b/_chess_styles.css
@@ -7,6 +7,12 @@ nav,
 section {
   display: block; }
   
+.spaceAndAlignCenter{
+	width:100%;
+	text-align:center;
+	float:left;
+}
+  
 
 
 
@@ -2151,6 +2157,7 @@ sizingMethod='scale')";
 
 /*******************************************************************************************************************************/
 /**Miscellaneous**/
+
 .spaceAndAlignCenter{
 	width:100%;
 	text-align:center;
